--- a/unibot_project/custom_admin/templates/custom_admin/base.html
+++ b/unibot_project/custom_admin/templates/custom_admin/base.html
@@ -32,13 +32,14 @@
     <div class="layout">
       <aside class="sidebar">
         <div class="menu-title">المحتوى</div>
-        <a class="menu-link" href="/admin/core/event/">الأحداث</a>
-        <a class="menu-link" href="/admin/core/category/">الفئات</a>
-        <a class="menu-link" href="/admin/core/faq/">الأسئلة الشائعة</a>
-        <a class="menu-link" href="/admin/core/favorite/">المفضلات</a>
-        <a class="menu-link" href="/admin/core/feedback/">التعليقات</a>
-        <a class="menu-link" href="/admin/core/customuser/">المستخدمون</a>
-        <a class="menu-link" href="/admin/core/knowledgebase/">Knowledge bases</a>
+        <!-- اربط عناصر القائمة بمسارات لوحة UniBot المخصّصة -->
+        <a class="menu-link" href="{% url 'custom_admin:events_list' %}">الأحداث</a>
+        <a class="menu-link" href="{% url 'custom_admin:categories_list' %}">الفئات</a>
+        <a class="menu-link" href="{% url 'custom_admin:faqs_list' %}">الأسئلة الشائعة</a>
+        <a class="menu-link" href="{% url 'custom_admin:favorites_list' %}">المفضلات</a>
+        <a class="menu-link" href="{% url 'custom_admin:feedbacks_list' %}">التعليقات</a>
+        <a class="menu-link" href="{% url 'custom_admin:users_list' %}">المستخدمون</a>
+        <a class="menu-link" href="{% url 'custom_admin:kb_list' %}">Knowledge bases</a>
 
         <div class="menu-title" style="margin-top:14px">روابط</div>
         <a class="menu-link" href="{% url 'custom_admin:dashboard' %}">لوحة التحكم</a>
